fix nav menu on mobile color

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@ html {
 
 body {
   margin-bottom: 185px;
+  background: #000000;
 }
 
 footer {
